fixed video layer z-index

--- a/src/Components/InterfaceComponent/InterfaceStyles.scss
+++ b/src/Components/InterfaceComponent/InterfaceStyles.scss
@@ -1,7 +1,7 @@
 .menu-button {
   z-index: 15;
   width: 40px;
-  height: 32px;
+  height: 35px;
   position: fixed;
   top: 20px;
   right: 20px;
