--- a/src/Components/ServicesItemCompoonent/ServicesItemStyles.scss
+++ b/src/Components/ServicesItemCompoonent/ServicesItemStyles.scss
@@ -34,7 +34,7 @@
 
 .services-item-container__title, .services-item-container__description,
 .services-item-container__text, .services-item-container__contect-button,
-.services-item-container__divider, .contact-info {
+.services-item-container__divider, .contact-info, .video {
   animation-name: appearingElement;
   animation-timing-function: ease-out;
   animation-fill-mode: forwards;
