--- a/src/Containers/VideoContainer/VideoContainerStyles.scss
+++ b/src/Containers/VideoContainer/VideoContainerStyles.scss
@@ -1,6 +1,6 @@
 .parallax-layer {
   &.video {
-    z-index: 4;
+    z-index: 10;
     display: flex;
     justify-content: center;
     align-items: center;
